--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "sass": "^1.61.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.3"
+  },
+  "gitHooks": {
+    "pre-commit": "yarn lint",
+    "commit-msg": "commitlint -E GIT_PARAMS"
   }
 }
