--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install",
+    "pre-commit": "next lint"
   },
   "dependencies": {
     "@types/mysql": "^2.15.21",
@@ -29,5 +31,8 @@
   "gitHooks": {
     "pre-commit": "yarn lint",
     "commit-msg": "commitlint -E GIT_PARAMS"
+  },
+  "devDependencies": {
+    "husky": "^8.0.3"
   }
 }
