--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "pre-commit": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.13",
     "@types/mysql": "^2.15.21",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
-    "antd": "^5.4.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.61.0",
+    "styled-components": "^5.3.11",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.3"
   },
